--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
             </button>
             <button class="btn m-2" data-filter=".best">Best Sellers</button>
             <button class="btn m-2" data-filter=".featured">Featured</button>
-            <button class="btn m-2" data-filter=".new">New Arrivals</button>
+            <button class="btn m-2" data-filter=".new">New Arrival</button>
           </div>
           <div class="collection-list row">
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div class="col-md-6 col-lg-4 col-xl-3 p-2 feat">
               <div class="collection-img position-relative">
                 <img
                   src="images/c_formal_gray_shirt.png"
@@ -162,14 +162,186 @@
                   >Sale</span
                 >
               </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3"></div>
-            <div class="col-md-6 col-lg-4 col-xl-3"></div>
-            <div class="col-md-6 col-lg-4 col-xl-3"></div>
-            <div class="col-md-6 col-lg-4 col-xl-3"></div>
-            <div class="col-md-6 col-lg-4 col-xl-3"></div>
-            <div class="col-md-6 col-lg-4 col-xl-3"></div>
-            <div class="col-md-6 col-lg-4 col-xl-3"></div>
+            <div class="col-md-6 col-lg-4 col-xl-3 p-2 best">
+              <div class="collection-img position-relative">
+                <img src="images/c_pant_girl.png" alt="Item 2" class="w-100" />
+                <span
+                  class="bg-primary position-absolute d-flex align-items-center justify-content-center text-white"
+                  >Sale</span
+                >
+              </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3 p-2 new">
+              <div class="collection-img position-relative">
+                <img src="images/c_polo-shirt.png" alt="Item 3" class="w-100" />
+                <span
+                  class="bg-primary position-absolute d-flex align-items-center justify-content-center text-white"
+                  >Sale</span
+                >
+              </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3 feat">
+              <div class="collection-img position-relative">
+                <img src="images/c_shirt-girl.png" alt="Item 4" class="w-100" />
+                <span
+                  class="bg-primary position-absolute d-flex align-items-center justify-content-center text-white"
+                  >Sale</span
+                >
+              </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3 best">
+              <div class="collection-img position-relative">
+                <img
+                  src="images/c_t-shirt_men.png"
+                  alt="Item 5"
+                  class="w-100"
+                />
+                <span
+                  class="bg-primary position-absolute d-flex align-items-center justify-content-center text-white"
+                  >Sale</span
+                >
+              </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3 new">
+              <div class="collection-img position-relative">
+                <img
+                  src="images/c_tunic-shirt_girl.png"
+                  alt="Item 6"
+                  class="w-100"
+                />
+                <span
+                  class="bg-primary position-absolute d-flex align-items-center justify-content-center text-white"
+                  >Sale</span
+                >
+              </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3 feat">
+              <div class="collection-img position-relative">
+                <img src="images/c_undershirt.png" alt="Item 7" class="w-100" />
+                <span
+                  class="bg-primary position-absolute d-flex align-items-center justify-content-center text-white"
+                  >Sale</span
+                >
+              </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3 best">
+              <div class="collection-img position-relative">
+                <img
+                  src="images/c_western-shirt.png"
+                  alt="Item 8"
+                  class="w-100"
+                />
+                <span
+                  class="bg-primary position-absolute d-flex align-items-center justify-content-center text-white"
+                  >Sale</span
+                >
+              </div>
+              <div class="text-center">
+                <div class="rating">
+                  <span class="text-primary">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                  </span>
+                </div>
+                <p class="text-capitalize my-1">Gray Shirt</p>
+                <span class="fw-bold">$ 49.99</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -188,5 +360,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
-2:37:14 - diri nag stop sa video july 30PM
