Update index.html and css

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <button class="btn m-2" data-filter=".new">New Arrival</button>
           </div>
           <div class="collection-list row">
-            <div class="col-md-6 col-lg-4 col-xl-3 p-2 feat">
+            <div class="col-md-6 col-lg-4 col-xl-3 p-2 featured">
               <div class="collection-img position-relative">
                 <img
                   src="images/c_formal_gray_shirt.png"
@@ -220,7 +220,7 @@
                 <span class="fw-bold">$ 49.99</span>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3 feat">
+            <div class="col-md-6 col-lg-4 col-xl-3 p-2 featured">
               <div class="collection-img position-relative">
                 <img src="images/c_shirt-girl.png" alt="Item 4" class="w-100" />
                 <span
@@ -294,7 +294,7 @@
                 <span class="fw-bold">$ 49.99</span>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3 feat">
+            <div class="col-md-6 col-lg-4 col-xl-3 featured">
               <div class="collection-img position-relative">
                 <img src="images/c_undershirt.png" alt="Item 7" class="w-100" />
                 <span
@@ -343,6 +343,261 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ---- Specials ---- -->
+    <section id="specials" class="py-5">
+      <div class="container">
+        <div class="title text-center py-5">
+          <h2 class="position-relative d-inline-block py-5">
+            Special Selection
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-4 col-xl-3 p-2">
+            <div class="special-img position-relative overflow-hidden">
+              <img
+                src="images/special_product_1.jpg"
+                alt="Special 1"
+                class="w-100"
+              />
+              <span
+                class="position-absolute d-flex align-items-center justify-content-center text-primary fs-4"
+              >
+                <i class="fa fa-heart"></i>
+              </span>
+            </div>
+            <div class="text-center">
+              <p class="text-capitalize">set one</p>
+              <span class="fw-bold d-block">$ 99.99
+              </span>
+              <a href="#" class="btn btn-primary mt-3">Add to Cart</a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3 p-2">
+            <div class="special-img position-relative overflow-hidden">
+              <img
+                src="images/special_product_2.jpg"
+                alt="Special 2"
+                class="w-100"
+              />
+              <span
+                class="position-absolute d-flex align-items-center justify-content-center text-primary fs-4"
+              >
+                <i class="fa fa-heart"></i>
+              </span>
+            </div>
+            <div class="text-center">
+              <p class="text-capitalize">set one</p>
+              <span class="fw-bold d-block">$ 99.99
+              </span>
+              <a href="#" class="btn btn-primary mt-3">Add to Cart</a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3 p-2">
+            <div class="special-img position-relative overflow-hidden ">
+              <img
+                src="images/special_product_3.jpg"
+                alt="Special 3"
+                class="w-100"
+              />
+              <span
+                class="position-absolute d-flex align-items-center justify-content-center text-primary fs-4"
+              >
+                <i class="fa fa-heart"></i>
+              </span>
+            </div>
+            <div class="text-center">
+              <p class="text-capitalize">set one</p>
+              <span class="fw-bold d-block">$ 99.99
+              </span>
+              <a href="#" class="btn btn-primary mt-3">Add to Cart</a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3 p-2">
+            <div class="special-img position-relative overflow-hidden">
+              <img
+                src="images/special_product_4.jpg"
+                alt="Special 4"
+                class="w-100"
+              />
+              <span
+                class="position-absolute d-flex align-items-center justify-content-center text-primary fs-4"
+              >
+                <i class="fa fa-heart"></i>
+              </span>
+            </div>
+            <div class="text-center">
+              <p class="text-capitalize">set one</p>
+              <span class="fw-bold d-block">$ 99.99
+              </span>
+              <a href="#" class="btn btn-primary mt-3 ">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <!-- ---- Banner ---- -->
+    <section id="banner" class="py-5">
+      <div class="container">
+        <div class="row d-flex align-items-center">
+          <div class="banner-content">
+            <span class="text-white">Discount Up to 50%</span>
+            <h2 class="mt-2 text-white">Grand Sale Offer</h2>
+            <a href="#" class="btn border-0">Buy Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ---- Blogs ---- -->
+    <section id="blogs" class="py-5">
+      <div class="container">
+        <div class="title text-center py-5">
+          <h2 class="position-relative d-inline-block">Our Latest Blog</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-4 card border-0 my-3">
+            <img src="images/blog_1.jpg" alt="Blog 1">
+            <div class="card-body px-0">
+              <h4 class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h4>
+              <p class="card-text mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil recusandae error perspiciatis, et consectetur eligendi voluptatum, molestias magni cum inventore facere eveniet explicabo sit aut.</p>
+              <p class="card-text">
+                <small class="text-muted">Author: </small>John Doe
+              </p>
+              <a href="#" class="btn">Read More</a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 card border-0 my-3">
+            <img src="images/blog_2.jpg" alt="Blog 2">
+            <div class="card-body px-0">
+              <h4 class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h4>
+              <p class="card-text mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil recusandae error perspiciatis, et consectetur eligendi voluptatum, molestias magni cum inventore facere eveniet explicabo sit aut.</p>
+              <p class="card-text">
+                <small class="text-muted">Author: </small>John Doe
+              </p>
+              <a href="#" class="btn">Read More</a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 card border-0 my-3">
+            <img src="images/blog_3.jpg" alt="Blog 3">
+            <div class="card-body px-0">
+              <h4 class="card-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </h4>
+              <p class="card-text mt-3 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil recusandae error perspiciatis, et consectetur eligendi voluptatum, molestias magni cum inventore facere eveniet explicabo sit aut.</p>
+              <p class="card-text">
+                <small class="text-muted">Author: </small>John Doe
+              </p>
+              <a href="#" class="btn">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ---- About Us ---- -->
+    <section id="about-us" class="py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 text-center text-lg-1 order-lg-1">
+            <div class="title pt-3 pb-5">
+              <h2 class="position-relative d-inline-block">About Us </h2>
+            </div>
+            <p class="lead text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero culpa aut exercitationem ad odit?
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium fugiat numquam adipisci natus quisquam odit quas ipsa necessitatibus, sed iure dolores culpa assumenda nobis, asperiores distinctio. Aspernatur numquam odit accusantium!
+            </p>
+          </div>
+          <div class="col-lg-6 order-lg-0">
+            <img src="images/about_us.jpg" alt="About Us Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ---- Popular ---- -->
+    <section id="popular" class="py-5">
+      <div class="container">
+        <div class="title pt-3 pb-5 text-center">
+          <h2 class="position-relative d-inline-block">Popular of This Year</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-4 g-3 row">
+            <h3 class="fs-5">Top Rated</h3>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/top_rated_1.jpg" alt="Top-rated-1" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/top_rated_2.jpg" alt="Top-rated-2" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/top_rated_3.jpg" alt="Top-rated-3" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 g-3 row">
+            <h3 class="fs-5">Best Selling</h3>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/best_selling_1.jpg" alt="Best Selling 1" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/best_selling_2.jpg" alt="Best Selling 2" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/best_selling_3.jpg" alt="Best Selling 3" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 g-3 row">
+            <h3 class="fs-5">On Sale</h3>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/on_sale_1.jpg" alt="On Sale 1" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/on_sale_2.jpg" alt="On Sale 2" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+            <div class="d-flex align-items-start justify-content-start">
+              <img src="images/on_sale_3.jpg" alt="On Sale 3" class="img-fluid w-25 pe-3">
+              <div class="description">
+                <p class="mb-0">Blue Shirt</p>
+                <span>$ 20.00</span>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
     </section>
