--- a/index.html
+++ b/index.html
@@ -602,6 +602,110 @@
       </div>
     </section>
 
+    <!-- ---- Newsletter ---- -->
+    <section id="newsletter" class="py-5">
+      <div class="container">
+        <div class="d-flex align-items-center justify-content-center flex-column">
+          <div class="title text-center pt-3 pb-5">
+            <h2 class="position-relative d-inline-block ms-4">
+              Newletter Subscription
+            </h2>
+          </div>
+          <p class="text-center text-muted">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit commodi vel saepe assumenda magni!
+          </p>
+          <div class="input-group mb-3 mt-3">
+            <input type="text" class="form-control" placeholder="Enter Your Email ...">
+            <button class="btn btn-primary" type="submit">Subscribe</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ---- Footer ---- -->
+    <!-- ---- Footer ---- -->
+    <footer class="bg-dark py-5">
+      <div class="container">
+        <div class="row text-white g-4">
+          <div class="col-md-6 col-lg-3">
+            <a href="index.html" class="brand text-decoration-none text-white">
+              ULTRA
+            </a>
+            <p class="text-white mt-3 text-muted">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque
+              ipsa dolores laudantium harum repellat eligendi quos facilis qui
+              aliquam pariatur.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <h5 class="fw-light">Links</h5>
+            <ul class="list-unstyled">
+              <li class="my-3">
+                <a href="#" class="text-white text-decoration-none text-muted">
+                  <i class="fa fa-chevron-right me-1"></i> Home
+                </a>
+              </li>
+              <li class="my-3">
+                <a href="#" class="text-white text-decoration-none text-muted">
+                  <i class="fa fa-chevron-right me-1"></i> Collection
+                </a>
+              </li>
+              <li class="my-3">
+                <a href="#" class="text-white text-decoration-none text-muted">
+                  <i class="fa fa-chevron-right me-1"></i> Blogs
+                </a>
+              </li>
+              <li class="my-3">
+                <a href="#" class="text-white text-decoration-none text-muted">
+                  <i class="fa fa-chevron-right me-1"></i> About Us
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <h5 class="fw-light mb-3">Contact Us</h5>
+            <div
+              class="d-flex justify-content-start align-items-start my-2 text-muted"
+            >
+              <span class="me-3"><i class="fa fa-envelope"></i></span>
+              <span class="fw-light">plus-ultra.support@gmail.com</span>
+            </div>
+            <div
+              class="d-flex justify-content-start align-items-start my-2 text-muted"
+            >
+              <span class="me-3"><i class="fa fa-map-marked"></i></span>
+              <span class="fw-light"
+                >Plus Ultra Street, Angeles City, Pampanga Philippines</span
+              >
+            </div>
+            <div
+              class="d-flex justify-content-start align-items-start my-2 text-muted"
+            >
+              <span class="me-3"><i class="fa fa-phone"></i></span>
+              <span class="fw-light">0987-654-3210</span>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <h5 class="fw-light mb-3">Follow Us</h5>
+            <ul class="list-unstyled d-flex">
+              <li class="text-decoration-none text-muted fs-4 me-4">
+                <i class="fab fa-facebook"></i>
+              </li>
+              <li class="text-decoration-none text-muted fs-4 me-4">
+                <i class="fab fa-twitter"></i>
+              </li>
+              <li class="text-decoration-none text-muted fs-4 me-4">
+                <i class="fab fa-instagram"></i>
+              </li>
+              <li class="text-decoration-none text-muted fs-4 me-4">
+                <i class="fab fa-pinterest"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- ---- JQuery JS ---- -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
